# jash-naik-blogs

./: .gitignore  README.md  astro.config.mjs  markdown-style-guide.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
blogs-examples/mcp-cli-chat/: .env.example  .gitignore  LICENSE  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
blogs-examples/mcp-cli-chat/core/: chat.py  cli.py  cli_chat.py
public/: OneDark-Pro.json  OneLight.json  robots.txt
src/: consts.ts  site.config.ts
src/components/: BaseHead.astro  BaseHeadEnhanced.astro  Footer.astro  Header.astro  Snackbar.tsx
src/components/BlogCard/: index.tsx
src/components/Breadcrumb/: index.astro
src/components/LinkPreview/: index.astro  index.tsx
src/components/Modal/: SearchButton.tsx  SearchIcon.tsx  index.astro  index.tsx
src/components/MoodToggle/: index.tsx
src/components/Navbar/: Logo.tsx  SearchIcon.tsx  index.tsx
src/components/Performance/: WebVitals.astro
src/components/SEO/: Audit.astro  SocialMeta.astro  StructuredData.astro
src/components/Sidebar/: index.astro  index.tsx
src/components/SocialShare/: index.astro
src/components/Typewriter/: index.tsx
src/components/blog/: Card.tsx  CodeBlock.astro  SummaryDrawer.astro  SummaryDrawer.tsx  Toc.astro
src/content/: config.ts
src/hooks/: useMediaQuery.ts
src/layouts/: BlogPost.astro  indexLayout.astro
src/pages/: about.astro  index.astro  rss.xml.js  search.astro  sidebar-content.astro  sitemap-custom.xml.js
src/styles/: BlogPost.css  global.css
src/utils/: imageConfig.ts  utils.ts
(+27 files in other folders)
